Fix distorted bug

--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -7,5 +7,5 @@
 
 .avatar.distorted {
   width: 200px;
-  height: 200%;
+  height: 400px;
 }
